# digital-life

./: .clang-format  .gitignore  README.md  vcpkg.json
app/app/: build.gradle.kts  proguard-rules.pro
app/app/src/androidTest/java/com/hwzy/app/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt
app/app/src/main/cpp/jni/: Android.mk  Application.mk  soundtouch-jni.cpp
app/app/src/main/java/com/hwzy/app/: MainActivity.kt  MyApp.kt
app/app/src/main/java/com/hwzy/app/audio/: AudioAssets.kt  AudioProcessor.kt  AudioTrackManager.kt
app/app/src/main/java/com/hwzy/app/components/: ProfileTopBar.kt  TopBar.kt
app/app/src/main/java/com/hwzy/app/data/: AppData.kt
app/app/src/main/java/com/hwzy/app/navigation/: NavGraph.kt  Navigation.kt  TopTabItem.kt
app/app/src/main/java/com/hwzy/app/permission/: PermissionManager.kt
app/app/src/main/java/com/hwzy/app/screens/discover/: DiscoverScreen.kt  TestScreen.kt
app/app/src/main/java/com/hwzy/app/screens/home/: HomeScreen.kt  HomeViewModel.kt
app/app/src/main/java/com/hwzy/app/screens/profile/: ProfileScreen.kt  SettingsScreen.kt
app/app/src/main/java/com/hwzy/app/soundtouch/: SoundTouch.kt
app/app/src/main/java/com/hwzy/app/ui/screens/: CameraPreviewScreen.kt
app/app/src/main/java/com/hwzy/app/ui/screens/discover/: CameraScreen.kt  DiscoverScreen.kt  SensorScreen.kt  TestScreen.kt
app/app/src/main/java/com/hwzy/app/ui/screens/home/: AIContent.kt  HomeContent.kt  HomeScreen.kt  HomeViewModel.kt  NewsContent.kt
app/app/src/main/java/com/hwzy/app/ui/screens/profile/: ProfileScreen.kt  SettingsScreen.kt
app/app/src/main/java/com/hwzy/app/ui/screens/search/: SearchScreen.kt
app/app/src/main/java/com/hwzy/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/java/com/hwzy/app/utils/: AssertManager.kt  SentryTree.kt
app/app/src/main/res/values/: strings.xml
app/app/src/main/res/values-zh/: strings.xml
app/app/src/test/java/com/hwzy/app/: ExampleUnitTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
atimic_program/pcm_resampling/: CMakeLists.txt
atimic_program/pcm_resampling/src/: main.cpp
atimic_program/video_file_decoder/: CMakeLists.txt  main.cpp
common/: .clang-format  CMakeLists.txt
common/include/: wdcommon.hpp  wdqueue.hpp  wdsingleton.hpp
components/AudioCaptureProcessor/: main.py
components/digital_hub/: client.h  install.iss  mainwindow.cpp  mainwindow.ui  player.cpp  player.h  player.ui  videowidget.cpp  videowidget.h
components/digital_hub/qrc/: main.qrc
components/reactor_server/: README.md  chatRoom.hpp  chatSession.cpp  chatSession.hpp  common_proto.hpp  eventDemultiplex.hpp  eventHandle.cpp  eventHandle.hpp  main.cpp  onlineChatRoom.hpp
components/wd-digital-system/: CMakeLists.txt  about.cpp  about.h  browserdataanalysis.ui  client.cpp  client.ui  imageviewer.cpp  imageviewer.h  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.ui  quihelper.cpp  register.cpp  videowidget.cpp
cpp-basic-library/include/: wdbase.hpp  wdobjPool.hpp  wdtimer.hpp
cpp-basic-library/test/: test.cpp
cv-learn/: CmakeLists.txt  ImageSimilarity.cpp
digital_hub/: CMakeLists.txt  common_proto.h  imageviewer.cpp  mainwindow.h  videowidget.h
digital_hub/include/: aichat.h  browserdataanalysis.h  quihelper.h
digital_hub/qrc/: main.qrc
digital_hub/src/: quihelper.cpp
digital_hub/ui/: aichat.cpp  aichat.ui  browserdataanalysis.cpp  client.cpp  imageviewer.ui  login.cpp  mainwindow.ui
http_proxy/: Dockerfile  app.py  common.py  docker-compose.yml  requirements.txt  util.py
https_server_go/: README.md  go.mod  main.go
my_utils/: CMakeLists.txt
my_utils/examples/: demo.cpp  demo_redefine.cpp
my_utils/include/my_utils/: filesystem.hpp  log.hpp  obj_pool.hpp  queue.hpp  singleton.hpp  timer.hpp  utils.hpp  uuid.hpp  wdconst.hpp  wdfilesystem.hpp  wdlog.hpp  wduuid.hpp
my_utils/src/: filesystem.cpp  my_utils.cpp  uuid.cpp
my_utils/tests/: CMakeLists.txt  test_utils.cpp
script/: PrintGeoLite2.py  parseGoogleBrowser.py  readExif.py  requirements.txt  video_file_transcoding.py  wd_connection.py  wdopenai.py
script/database/: huiwen_online.sql
server/: CMakeLists.txt  LICENSE  chatParticipant.hpp  chatRoom.cpp  common.hpp  eventDemultiplex.cpp  eventHandle.cpp  main.hpp  onlineChatRoom.cpp  reactor.cpp  reactor.hpp  start.sh  util.cpp  util.hpp
